PHP export: migrate to PDO and support etherpad linkify plugin

--- a/settings.yml.template
+++ b/settings.yml.template
@@ -13,6 +13,7 @@ db:
     username: eplite
     password: eplite
     database: eplite
+    dsn: 'sqlite:var/etherpad.db'
 
 # do you want the exported folder to be timestamped?
 timestamp: true
